Bug 440731 - Latte crash after login
Summary: Latte crash after login
Status: RESOLVED FIXED
Alias: None
Product: lattedock
Classification: Unmaintained
Component: application (other bugs)
Version First Reported In: 0.10.0
Platform: Neon Linux
: NOR crash
Target Milestone: ---
Assignee: Michail Vourlakos
URL:
Keywords: drkonqi
Depends on:
Blocks:
 
Reported: 2021-08-08 09:50 UTC by bertil.bonus
Modified: 2021-08-08 11:28 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description bertil.bonus 2021-08-08 09:50:21 UTC
Application: latte-dock (0.10.0)

Qt Version: 5.15.3
Frameworks Version: 5.84.0
Operating System: Linux 5.11.0-25-generic x86_64
Windowing System: X11
Drkonqi Version: 5.22.4
Distribution: KDE neon User Edition 5.22

-- Information about the crash:
- What I was doing when the application crashed:
Starting the computer.

Latte crash after desktop login. First yhing that happened.

The reporter is unsure if this crash is reproducible.

-- Backtrace:
Application: Latte Dock (latte-dock), signal: Segmentation fault

[New LWP 6441]
[New LWP 6443]
[Thread debugging using libthread_db enabled]
Using host libthread_db library "/lib/x86_64-linux-gnu/libthread_db.so.1".
0x00007fed9af58aff in __GI___poll (fds=0x7ffcc9543f38, nfds=1, timeout=1000) at ../sysdeps/unix/sysv/linux/poll.c:29
[Current thread is 1 (Thread 0x7fed973ca9c0 (LWP 6440))]

Thread 3 (Thread 0x7fed9594a700 (LWP 6443)):
#0  0x00007fed9af58aff in __GI___poll (fds=0x7fed88004e60, nfds=1, timeout=-1) at ../sysdeps/unix/sysv/linux/poll.c:29
#1  0x00007fed9985e36e in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x00007fed9985e4a3 in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007fed9b676fcb in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /lib/x86_64-linux-gnu/libQt5Core.so.5
#4  0x00007fed9b61b25b in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /lib/x86_64-linux-gnu/libQt5Core.so.5
#5  0x00007fed9b434c22 in QThread::exec() () from /lib/x86_64-linux-gnu/libQt5Core.so.5
#6  0x00007fed9b8d8f4b in ?? () from /lib/x86_64-linux-gnu/libQt5DBus.so.5
#7  0x00007fed9b435dbc in ?? () from /lib/x86_64-linux-gnu/libQt5Core.so.5
#8  0x00007fed9a64d609 in start_thread (arg=<optimized out>) at pthread_create.c:477
#9  0x00007fed9af65293 in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95

Thread 2 (Thread 0x7fed965ab700 (LWP 6441)):
#0  0x00007fed9af58aff in __GI___poll (fds=0x7fed965aaae8, nfds=1, timeout=-1) at ../sysdeps/unix/sysv/linux/poll.c:29
#1  0x00007fed9da93c1a in ?? () from /lib/x86_64-linux-gnu/libxcb.so.1
#2  0x00007fed9da9590a in xcb_wait_for_event () from /lib/x86_64-linux-gnu/libxcb.so.1
#3  0x00007fed96cd5e58 in ?? () from /lib/x86_64-linux-gnu/libQt5XcbQpa.so.5
#4  0x00007fed9b435dbc in ?? () from /lib/x86_64-linux-gnu/libQt5Core.so.5
#5  0x00007fed9a64d609 in start_thread (arg=<optimized out>) at pthread_create.c:477
#6  0x00007fed9af65293 in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95

Thread 1 (Thread 0x7fed973ca9c0 (LWP 6440)):
[KCrash Handler]
#4  QString::QString (other=..., this=0x7ffcc9544b90) at /usr/include/x86_64-linux-gnu/qt5/QtCore/qstring.h:1093
#5  Latte::Layout::AbstractLayout::name (this=0x0) at ./app/layout/abstractlayout.cpp:204
#6  0x000055706adaa0ef in Latte::Layouts::Synchronizer::currentLayoutsNames (this=<optimized out>) at ./app/layouts/synchronizer.cpp:202
#7  0x000055706ad95a56 in Latte::Layouts::Manager::currentLayoutsNames (this=<optimized out>) at ./app/layouts/manager.cpp:155
#8  0x000055706adf6842 in Latte::Settings::Controller::Layouts::initLayouts (this=this@entry=0x55706d11e660) at ./app/settings/settingsdialog/layoutscontroller.cpp:582
#9  0x000055706adf7d2d in Latte::Settings::Controller::Layouts::Layouts (this=0x55706d11e660, parent=<optimized out>) at ./app/settings/settingsdialog/layoutscontroller.cpp:75
#10 0x000055706ae16c44 in Latte::Settings::Handler::TabLayouts::TabLayouts (this=0x55706d16fcd0, parent=<optimized out>) at ./app/settings/settingsdialog/tablayoutshandler.cpp:880
#11 0x000055706ae0870a in Latte::Settings::Dialog::SettingsDialog::SettingsDialog (this=0x55706cb90f00, parent=<optimized out>, corona=<optimized out>) at ./app/settings/settingsdialog/settingsdialog.cpp:69
#12 0x000055706ad95c83 in Latte::Layouts::Manager::showLatteSettingsDialog (this=0x55706cd47470, firstPage=0, toggleCurrentPage=<optimized out>) at ./app/layouts/manager.cpp:398
#13 0x000055706ad5872d in Latte::Corona::showSettingsWindow (this=<optimized out>, page=<optimized out>) at ./app/lattecorona.cpp:1126
#14 0x000055706aec0713 in LatteDockAdaptor::showSettingsWindow (page=<optimized out>, this=0x55706cbc6a10) at /usr/include/x86_64-linux-gnu/qt5/QtCore/qobject.h:425
#15 LatteDockAdaptor::qt_static_metacall (_o=_o@entry=0x55706cbc6a10, _id=_id@entry=10, _a=_a@entry=0x7ffcc9544f30, _c=QMetaObject::InvokeMetaMethod) at ./obj-x86_64-linux-gnu/app/lattedockadaptor.moc:199
#16 0x000055706aec0981 in LatteDockAdaptor::qt_static_metacall (_a=0x7ffcc9544f30, _id=10, _c=QMetaObject::InvokeMetaMethod, _o=0x55706cbc6a10) at ./obj-x86_64-linux-gnu/app/lattedockadaptor.moc:241
#17 LatteDockAdaptor::qt_metacall (this=0x55706cbc6a10, _c=QMetaObject::InvokeMetaMethod, _id=10, _a=0x7ffcc9544f30) at ./obj-x86_64-linux-gnu/app/lattedockadaptor.moc:241
#18 0x00007fed9b8e555b in ?? () from /lib/x86_64-linux-gnu/libQt5DBus.so.5
#19 0x00007fed9b8ea9e7 in ?? () from /lib/x86_64-linux-gnu/libQt5DBus.so.5
#20 0x00007fed9b8eade0 in ?? () from /lib/x86_64-linux-gnu/libQt5DBus.so.5
#21 0x00007fed9b8ee01c in ?? () from /lib/x86_64-linux-gnu/libQt5DBus.so.5
#22 0x00007fed9b64a2f9 in QObject::event(QEvent*) () from /lib/x86_64-linux-gnu/libQt5Core.so.5
#23 0x00007fed9c3f2dc3 in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /lib/x86_64-linux-gnu/libQt5Widgets.so.5
#24 0x00007fed9c3fbbb8 in QApplication::notify(QObject*, QEvent*) () from /lib/x86_64-linux-gnu/libQt5Widgets.so.5
#25 0x00007fed9b61c75a in QCoreApplication::notifyInternal2(QObject*, QEvent*) () from /lib/x86_64-linux-gnu/libQt5Core.so.5
#26 0x00007fed9b61f061 in QCoreApplicationPrivate::sendPostedEvents(QObject*, int, QThreadData*) () from /lib/x86_64-linux-gnu/libQt5Core.so.5
#27 0x00007fed9b677957 in ?? () from /lib/x86_64-linux-gnu/libQt5Core.so.5
#28 0x00007fed9985e17d in g_main_context_dispatch () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#29 0x00007fed9985e400 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#30 0x00007fed9985e4a3 in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#31 0x00007fed9b676fb2 in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /lib/x86_64-linux-gnu/libQt5Core.so.5
#32 0x00007fed9b61b25b in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /lib/x86_64-linux-gnu/libQt5Core.so.5
#33 0x00007fed9b623414 in QCoreApplication::exec() () from /lib/x86_64-linux-gnu/libQt5Core.so.5
#34 0x000055706ad33216 in main (argc=<optimized out>, argv=<optimized out>) at ./app/main.cpp:313
[Inferior 1 (process 6440) detached]

Possible duplicates by query: bug 82199, bug 440723, bug 429973, bug 424760, bug 410345.

Reported using DrKonqi
This report was filed against 'kde' because the product 'latte-dock' could not be located in Bugzilla. Add it to drkonqi's mappings file!
Comment 1 Michail Vourlakos 2021-08-08 10:42:54 UTC
https://userbase.kde.org/LatteDock/HowToReportCrashes
Comment 2 Michail Vourlakos 2021-08-08 10:44:25 UTC
Your Latte is trying to double open itself during startup. You can try to disable autostart.
Comment 3 Michail Vourlakos 2021-08-08 11:28:17 UTC
Git commit e1a472811d7dfdf284d2c335469dcaa95a93ddfb by Michail Vourlakos.
Committed on 08/08/2021 at 11:26.
Pushed by mvourlakos into branch 'v0.10'.

crash:dont show settings dialog in early startup

--showing settings dialog too early before layout(s)
are loaded can possible create crashes. Settings dialog
is considering that everything is in place and ready
to be used.

M  +6    -0    app/lattecorona.cpp
M  +1    -0    app/lattecorona.h
M  +6    -1    app/layouts/synchronizer.cpp

https://invent.kde.org/plasma/latte-dock/commit/e1a472811d7dfdf284d2c335469dcaa95a93ddfb
Comment 4 Michail Vourlakos 2021-08-08 11:28:58 UTC
Git commit f7032f7f196b0051fc4a4b52c6d6a14f361984fe by Michail Vourlakos.
Committed on 08/08/2021 at 11:28.
Pushed by mvourlakos into branch 'master'.

crash:dont show settings dialog in early startup

--showing settings dialog too early before layout(s)
are loaded can possible create crashes. Settings dialog
is considering that everything is in place and ready
to be used.

M  +6    -0    app/lattecorona.cpp
M  +1    -0    app/lattecorona.h
M  +6    -1    app/layouts/synchronizer.cpp

https://invent.kde.org/plasma/latte-dock/commit/f7032f7f196b0051fc4a4b52c6d6a14f361984fe